get all users initial build
